# isaac_ros_object_detection

./: .gitigonre  CMakeLists.txt  LICENSE  README.md  package.xml
config/: annotated_img_publisher_params.yaml  dnn_img_enc_params.yaml  obj_det_params.yaml
docs/: ANNOTATED_IMAGE_PUBLISHER_PLAN.md
include/isaac_ros_object_detection/: annotated_image_publisher_node.hpp  annotation_kernels.hpp  object_detection_node.hpp
launch/: annotated_image_publisher.launch.py  composible_node_container.launch.py  dev.launch.py
scripts/: export_model_plan.py  inspect_model.py
scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scripts/log/: latest_build
src/: annotated_image_publisher_main.cpp  annotated_image_publisher_node.cpp  annotation_kernels.cu  cuda_kernels.cu  main.cpp  object_detection_node.cpp
